--- a/README.adoc
+++ b/README.adoc
@@ -1996,18 +1996,21 @@ These are not meant as learning resources but rather as useful programs:
 * https://github.com/scanlime/metalkit A more automated / general bare metal compilation system. Untested, but looks promising.
 * Python without an "OS": https://us.pycon.org/2015/schedule/presentation/378/
 
-=== Other archs
+=== ARM
 
-For when we decide to port this tutorial:
+Bare metal ARM stuff:
 
-ARM:
-
+* Generic:
+** https://stackoverflow.com/questions/38914019/how-to-make-bare-metal-arm-programs-and-run-them-on-qemu/50981397#50981397 generic QEMU question
+** link:https://github.com/freedomtan/aarch64-bare-metal-qemu/tree/2ae937a2b106b43bfca49eec49359b3e30eac1b1[]: `-M virt` UART bare metal hello world, nothing else, just works
+** https://github.com/bravegnu/gnu-eprog Not tested.
+** https://stackoverflow.com/questions/29837892/how-to-run-a-c-program-with-no-os-on-the-raspberry-pi/40063032#40063032 no QEMU restriction
+** https://github.com/cirosantilli/raspberry-pi-bare-metal-blinker minimal, but not very QEMU friendly however because hard to observe LED: https://raspberrypi.stackexchange.com/questions/56373/is-it-possible-to-get-the-state-of-the-leds-and-gpios-in-a-qemu-emulation-like-t
 * Raspberry PI:
+** https://raspberrypi.stackexchange.com/questions/34733/how-to-do-qemu-emulation-for-bare-metal-raspberry-pi-images/85135#85135 RPI3 specific
 ** link:https://github.com/bztsrc/raspi3-tutorial[], getting started: https://raspberrypi.stackexchange.com/questions/34733/how-to-do-qemu-emulation-for-bare-metal-raspberry-pi-images/85135#85135
 ** https://github.com/dwelch67/raspberrypi
 ** https://github.com/BrianSidebotham/arm-tutorial-rpi
-* non Raspberry pi specific:
-** https://github.com/bravegnu/gnu-eprog
 
 == LICENSE
 
